--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tower-http = { version = "0.6.2", features = ["fs"] }
 
 rustls-acme = { version = "0.12.1", features = ["axum"], optional = true}
 tokio-stream = { version = "0.1.17", optional = true }
+liquid = "0.26.9"
 
 [profile.release]
 debug = false
