feat(search): make search work on raw text not md;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rustls-acme = { version = "0.12.1", features = ["axum"], optional = true}
 tokio-stream = { version = "0.1.17", optional = true }
 twemoji = { git = "https://github.com/5-pebbles/twemoji.git" }
 serde = { version = "1.0.217", features = ["derive"] }
+md_to_text = "0.0.0"
 
 [profile.release]
 debug = false
