--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "1.43.0", features = ["net"], optional = true }
 tokio-util = { version = "0.7.13", features = ["compat"] }
 
 [features]
-default = ["https"]
+default = []
 https = [
   "rocket/tls",
   "dep:rustls-acme",
