--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,27 +7,18 @@ edition = "2024"
 either = "1.13.0"
 log = "0.4.25"
 pulldown-cmark = "0.12.2"
-rocket = { git = "https://github.com/rwf2/Rocket.git", features = ["json"] }
+rocket = { git = "https://github.com/rwf2/Rocket.git", features = [
+  "json",
+  "tls",
+] }
 twemoji = { git = "https://github.com/5-pebbles/twemoji.git", version = "0.1.0" }
-
-rustls-acme = { version = "0.12.1", features = [
-  "ring",
-  "tokio",
-], optional = true }
-tokio-rustls = { version = "0.26.1", optional = true }
-tokio-stream = { version = "0.1.17", features = ["net"], optional = true }
-tokio = { version = "1.43.0", features = ["net"], optional = true }
+rustls-acme = { version = "0.12.1", features = ["ring", "tokio"] }
+tokio-rustls = { version = "0.26.1" }
+tokio-stream = { version = "0.1.17", features = ["net"] }
+tokio = { version = "1.43.0", features = ["net"] }
 tokio-util = { version = "0.7.13", features = ["compat"] }
+clap = { version = "4.5.27", features = ["derive"] }
 
-[features]
-default = []
-https = [
-  "rocket/tls",
-  "dep:rustls-acme",
-  "dep:tokio-rustls",
-  "dep:tokio-stream",
-  "dep:tokio",
-]
 
 [profile.release]
 lto = true
