--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ rocket = { git = "https://github.com/rwf2/Rocket.git", features = [
   "json",
   "tls",
 ] }
-twemoji = { git = "https://github.com/5-pebbles/twemoji.git", version = "0.1.0" }
 rustls-acme = { version = "0.12.1", features = ["ring", "tokio"] }
 tokio-rustls = { version = "0.26.1" }
 tokio-stream = { version = "0.1.17", features = ["net"] }
 tokio = { version = "1.43.0", features = ["net"] }
 tokio-util = { version = "0.7.13", features = ["compat"] }
 clap = { version = "4.5.27", features = ["derive"] }
+aho-corasick = "1.1.3"
 
 
 [profile.release]
