--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ clap = { version = "4.5.27", features = ["derive"] }
 aho-corasick = "1.1.3"
 
 
+[dev-dependencies]
+scraper = "0.25"
+
 [profile.release]
 lto = true
 codegen-units = 1
